Fixed favicon not showing up

--- a/css/main.css
+++ b/css/main.css
@@ -25,10 +25,6 @@ section {
   margin-top: .5em;
 }
 
-.minified {
-  
-}
-
 /* Scrolling */
 
 html {
